# S25-core-course-labs

./: .gitignore  AGENTS.md  RUBRIC.md
.github/workflows/: ansible-deploy.yml  helm-ci.yml  python-ci.yml
ansible/: README.md  ansible.cfg  pyproject.toml
ansible/collections/: requirements.yml
ansible/docs/: LAB05.md  LAB06.md
ansible/group_vars/: all.yml
ansible/inventory/: gcp_compute.yml  hosts.ini
ansible/playbooks/: deploy-monitoring.yml  deploy.yml  site.yml
ansible/roles/app_deploy/defaults/: main.yml
ansible/roles/app_deploy/handlers/: main.yml
ansible/roles/app_deploy/tasks/: main.yml
ansible/roles/common/defaults/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/docker/defaults/: main.yml
ansible/roles/docker/tasks/: main.yml
app_python/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
app_python/docs/: LAB01.md  LAB02.md  LAB03.md  LAB04.md  LAB05_old.md  LAB08.md
app_python/tests/: test_app.py
k8s/: HELM.md  README.md  deployment.yml  kind-cluster.yml  service.yml
k8s/python-app/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.yaml
k8s/python-app/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  service.yaml
monitor/: docker-compose.yml
monitor/docs/: LAB07.md  LAB08.md
monitor/grafana/dashboards/: lab08-metrics.json
monitor/loki/: config.yml
monitor/prometheus/: prometheus.yml
monitor/promtail/: config.yml
pulumi/: Pulumi.yaml  __main__.py  pyproject.toml
pulumi/docs/: LAB04.md
terraform/: main.tf  outputs.tf  variables.tf
(+17 files in other folders)
